--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   http: ^1.2.2
   flutter_secure_storage: ^9.2.2
   go_router: ^14.6.2
+  flutter_markdown: ^0.7.1
 
 
 dev_dependencies:
