migrated from pgsql to Supabase pgsql

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,7 +3,15 @@ PORT=3000
 NODE_ENV=development
 
 # Database
-DATABASE_URL=postgres://postgres:root@localhost:5433/skilltrack_pro
+# Supabase Postgres (database only). Replace [YOUR-PASSWORD] before running.
+# If you still get timeouts on port 5432, use Supabase "Connection Pooler" URL instead.
+DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.batlfpasbydwfwjtiikr.supabase.co:5432/postgres
+
+# Optional (override defaults)
+PGSSLMODE=require
+PG_POOL_MAX=10
+PG_CONNECTION_TIMEOUT_MS=10000
+PG_IDLE_TIMEOUT_MS=30000
 
 # Auth
 JWT_SECRET=change_me_in_production
