ready for deployment

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -19,7 +19,9 @@ JWT_EXPIRES_IN=7d
 
 # Password reset
 RESET_TOKEN_EXPIRES_MINUTES=30
-FRONTEND_RESET_URL=http://localhost:3000/reset-password?token=
+# Optional: only used to print a clickable password-reset link in dev logs.
+# If omitted, the API returns the reset token in non-production for testing.
+FRONTEND_RESET_URL=
 
 # Optional dev seeding
 SEED_ADMIN_EMAIL=admin@skilltrack.local
