--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   go_router: ^14.6.2
   flutter_markdown: ^0.7.1
+  flutter_dotenv: ^5.1.0
 
 
 dev_dependencies:
@@ -61,6 +62,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+
+  assets:
+    - .env
 
   # To add assets to your application, add an assets section, like this:
   # assets:
