Added DNS to resolve the ipv4 of supabase on env and app.js file env reading logic changed

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,7 +4,9 @@ NODE_ENV=development
 
 # Database
 # Supabase Postgres (database only). Replace [YOUR-PASSWORD] before running.
-# If you still get timeouts on port 5432, use Supabase "Connection Pooler" URL instead.
+# NOTE (serverless/Vercel): the direct host `db.<ref>.supabase.co` may be IPv6-only.
+# Many serverless runtimes are IPv4-only which can surface as `getaddrinfo ENOTFOUND`.
+# For Vercel, prefer Supabase "Connection pooling" URL (pooler host + port 6543).
 DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.batlfpasbydwfwjtiikr.supabase.co:5432/postgres
 
 # Optional (override defaults)
